_generated-doc/2.13/config/quarkus-elasticsearch-restclient-lowlevel.adoc

:summaryTableId: quarkus-elasticsearch-restclient-lowlevel
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-elasticsearch-restclient-lowlevel_configuration]]link:#quarkus-elasticsearch-restclient-lowlevel_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.health.enabled]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.health.enabled[quarkus.elasticsearch.health.enabled]`

[.description]
--
Whether a health check is published in case the smallrye-health extension is present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.hosts]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.hosts[quarkus.elasticsearch.hosts]`

[.description]
--
The list of hosts of the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of host:port 
|`localhost:9200`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.protocol]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.protocol[quarkus.elasticsearch.protocol]`

[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.username]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.username[quarkus.elasticsearch.username]`

[.description]
--
The username for basic HTTP authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.password]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.password[quarkus.elasticsearch.password]`

[.description]
--
The password for basic HTTP authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.connection-timeout]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.connection-timeout[quarkus.elasticsearch.connection-timeout]`

[.description]
--
The connection timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.socket-timeout]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.socket-timeout[quarkus.elasticsearch.socket-timeout]`

[.description]
--
The socket timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_SOCKET_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_SOCKET_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.max-connections]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.max-connections[quarkus.elasticsearch.max-connections]`

[.description]
--
The maximum number of connections to all the Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.max-connections-per-route]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.max-connections-per-route[quarkus.elasticsearch.max-connections-per-route]`

[.description]
--
The maximum number of connections per Elasticsearch server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.io-thread-counts]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.io-thread-counts[quarkus.elasticsearch.io-thread-counts]`

[.description]
--
The number of IO thread. By default, this is the number of locally detected processors. 
Thread counts higher than the number of processors should not be necessary because the I/O threads rely on non-blocking operations, but you may want to use a thread count lower than the number of processors.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_IO_THREAD_COUNTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_IO_THREAD_COUNTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.discovery.enabled]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.discovery.enabled[quarkus.elasticsearch.discovery.enabled]`

[.description]
--
Defines if automatic discovery is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.discovery.refresh-interval]]`link:#quarkus-elasticsearch-restclient-lowlevel_quarkus.elasticsearch.discovery.refresh-interval[quarkus.elasticsearch.discovery.refresh-interval]`

[.description]
--
Refresh interval of the node list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
